16445
Trying to define a method named ... doesn't work in Eclipse or the console.
```
scala>   def ... = "hi"
<console>:1: error: illegal character
         def ... = "hi"
             ^
```

this works:
```
scala> def `...` = "hi"
$u2026: java.lang.String
```

I'm using Windows 7, Java 1.6_22. 
